@@ -1,6 +1,7 @@
 0.7.1
 - Improved speed by optimization of GUI functions 
 - Hash checks: Replace exception with a user-friendly warning (#128)
+- Change: Renamed config key "kde multivariate" to "kde accuracy"
 - Bugfixes:
   - Contour plot displays unused contour accuracy parameters
   - Persistent busy cursor when trace or video data is missing
